# Oikumene

./: .clang-format  .editorconfig  .gitignore  README.md
CppClient/: CMakeLists.txt
CppClient/cmake/: ThirdParty.cmake
CppClient/config/: settings.example.json
CppClient/include/oikumene/ai/: decision_models.hpp  decision_provider.hpp  heuristic_decision_provider.hpp  remote_decision_provider.hpp  strategic_report.hpp
CppClient/include/oikumene/app/: app_config.hpp  app_state.hpp  command_line.hpp  input_controller.hpp  input_policy.hpp  oikumene_app.hpp  simulation_controller.hpp
CppClient/include/oikumene/core/: simulation.hpp  types.hpp
CppClient/include/oikumene/io/: export_service.hpp  json_protocol.hpp  simulation_json.hpp
CppClient/include/oikumene/network/: http_client.hpp
CppClient/include/oikumene/render/: camera_controller.hpp  color_palette.hpp  map_layer.hpp  map_renderer.hpp  selection.hpp  symbol_registry.hpp
CppClient/include/oikumene/sim/: band.hpp  band_system.hpp  control_field.hpp  diplomacy.hpp  diplomacy_system.hpp  event.hpp  event_log.hpp  occupation.hpp  occupation_system.hpp  pathfinding.hpp  polity.hpp  polity_system.hpp  route.hpp  route_audit.hpp  route_planner.hpp  route_system.hpp  settlement.hpp  settlement_system.hpp  simulation_metrics.hpp  simulation_params.hpp  stockpile.hpp  tech_effects.hpp  technology.hpp  technology_system.hpp  trade.hpp  trade_planner.hpp  trade_system.hpp  vassal_system.hpp  vassal_treaty.hpp  war.hpp  war_campaign.hpp  war_planner.hpp  war_system.hpp  war_target.hpp  war_target_planner.hpp
CppClient/include/oikumene/ui/: details_panel.hpp  event_log_panel.hpp  help_panel.hpp  hud_panel.hpp  legend_panel.hpp  panel_layout.hpp  playback_bar.hpp  view_helpers.hpp
CppClient/include/oikumene/world/: biome.hpp  improvement.hpp  resource.hpp  route_kind.hpp  tile.hpp  world.hpp  world_generation_params.hpp  world_generation_report.hpp  world_generator.hpp
CppClient/src/: main.cpp
CppClient/src/ai/: heuristic_decision_provider.cpp  remote_decision_provider.cpp  strategic_report.cpp  strategic_report_actions.cpp  strategic_report_actions.hpp  strategic_report_helpers.cpp  strategic_report_helpers.hpp  strategic_report_summary.cpp  strategic_report_summary.hpp
CppClient/src/app/: app_config.cpp  command_line.cpp  input_controller.cpp  input_policy.cpp  oikumene_app.cpp  simulation_controller.cpp
CppClient/src/core/: simulation.cpp
CppClient/src/io/: export_service.cpp  simulation_json.cpp  simulation_snapshot_json.cpp
CppClient/src/network/: http_client.cpp
CppClient/src/render/: camera_controller.cpp  color_palette.cpp  map_layer.cpp  map_renderer.cpp  selection.cpp  symbol_registry.cpp
CppClient/src/sim/: band.cpp  band_system.cpp  control_field.cpp  diplomacy.cpp  diplomacy_system.cpp  event.cpp  event_log.cpp  occupation.cpp  occupation_system.cpp  pathfinding.cpp  polity.cpp  polity_system.cpp  route.cpp  route_audit.cpp  route_planner.cpp  route_system.cpp  settlement.cpp  settlement_improvement.cpp  settlement_improvement.hpp  settlement_production.cpp  settlement_production.hpp  settlement_system.cpp  settlement_work.cpp  settlement_work.hpp  simulation_conflict_metrics.cpp  simulation_metrics.cpp  simulation_params.cpp  simulation_polity_metrics.cpp  tech_effects.cpp  technology.cpp  technology_system.cpp  trade.cpp  trade_planner.cpp  trade_system.cpp  vassal_system.cpp  vassal_treaty.cpp  war.cpp  war_campaign.cpp  war_planner.cpp  war_system.cpp  (+2 more)
CppClient/src/ui/: details_panel.cpp  event_log_panel.cpp  help_panel.cpp  hud_panel.cpp  legend_panel.cpp  panel_layout.cpp  playback_bar.cpp  view_helpers.cpp
CppClient/src/world/: biome.cpp  improvement.cpp  resource.cpp  route_kind.cpp  world.cpp  world_generation_params.cpp  world_generation_report.cpp  world_generator.cpp  world_generator_climate.cpp  world_generator_ecology.cpp  world_generator_helpers.cpp  world_generator_helpers.hpp  world_generator_hydrology.cpp  world_generator_resources.cpp  world_generator_terrain.cpp
CppClient/tests/: check_sim_balance_batch.cmake  check_sim_batch.cmake  test_app_config.cpp  test_band_settlement.cpp  test_camera_controller.cpp  test_control_field.cpp  test_decision_models.cpp  test_diplomacy_system.cpp  test_input_policy.cpp  test_occupation_system.cpp  test_pathfinding.cpp  test_polity.cpp  test_polity_economy.cpp  test_route_effects.cpp  test_route_network.cpp  test_selection.cpp  test_settlement_economy.cpp  test_simulation_controller.cpp  test_strategic_report.cpp  test_symbol_registry.cpp  test_tech_effects.cpp  test_technology.cpp  test_trade_system.cpp  test_vassal_system.cpp  test_war_planner.cpp  test_war_system.cpp  test_war_target_planner.cpp  test_world_generation.cpp  test_world_generation_balance.cpp
CppClient/tools/: sim_balance_batch.cpp  sim_balance_metrics.cpp  sim_balance_metrics.hpp  sim_balance_output.cpp  sim_batch.cpp  worldgen_batch.cpp
PythonAgentServer/: README.md  pyproject.toml
PythonAgentServer/src/oikumene_agent/: __init__.py  main.py
PythonAgentServer/src/oikumene_agent/agents/: __init__.py  base.py  heuristic_agent.py
PythonAgentServer/src/oikumene_agent/api/: __init__.py  routes.py
PythonAgentServer/src/oikumene_agent/schemas/: __init__.py  decision.py
PythonAgentServer/tests/: test_api_routes.py
docs/: ARCHITECTURE.md  LEGEND.md  PROTOCOL.md  ROADMAP.md
frontend/: README.md
scripts/: format_cpp.py  regression_cpp.sh  vendor_third_party.py
shared/samples/: decision_request.example.json  decision_response.example.json
shared/schemas/: decision_request.schema.json  decision_response.schema.json
