[project]
name = "oikumene-agent"
version = "0.1.0"
description = "Advisory AI decision service for Oikumene."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.0",
    "pydantic>=2.13.4",
    "uvicorn>=0.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oikumene_agent"]
